// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`IPC message snapshots ClientMessage types user_message serializes to expected JSON 1`] = `
{
  "content": "Hello, assistant!",
  "sessionId": "sess-001",
  "type": "user_message",
}
`;

exports[`IPC message snapshots ClientMessage types confirmation_response serializes to expected JSON 1`] = `
{
  "decision": "allow",
  "requestId": "req-001",
  "selectedPattern": "bash:npm *",
  "selectedScope": "/projects/my-app",
  "type": "confirmation_response",
}
`;

exports[`IPC message snapshots ClientMessage types session_list serializes to expected JSON 1`] = `
{
  "type": "session_list",
}
`;

exports[`IPC message snapshots ClientMessage types session_create serializes to expected JSON 1`] = `
{
  "correlationId": "corr-001",
  "title": "New session",
  "type": "session_create",
}
`;

exports[`IPC message snapshots ClientMessage types session_switch serializes to expected JSON 1`] = `
{
  "sessionId": "sess-002",
  "type": "session_switch",
}
`;

exports[`IPC message snapshots ClientMessage types ping serializes to expected JSON 1`] = `
{
  "type": "ping",
}
`;

exports[`IPC message snapshots ClientMessage types cancel serializes to expected JSON 1`] = `
{
  "type": "cancel",
}
`;

exports[`IPC message snapshots ClientMessage types model_get serializes to expected JSON 1`] = `
{
  "type": "model_get",
}
`;

exports[`IPC message snapshots ClientMessage types model_set serializes to expected JSON 1`] = `
{
  "model": "claude-opus-4-6",
  "type": "model_set",
}
`;

exports[`IPC message snapshots ClientMessage types history_request serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "type": "history_request",
}
`;

exports[`IPC message snapshots ClientMessage types undo serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "type": "undo",
}
`;

exports[`IPC message snapshots ClientMessage types usage_request serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "type": "usage_request",
}
`;

exports[`IPC message snapshots ClientMessage types sandbox_set serializes to expected JSON 1`] = `
{
  "enabled": true,
  "type": "sandbox_set",
}
`;

exports[`IPC message snapshots ClientMessage types cu_session_create serializes to expected JSON 1`] = `
{
  "screenHeight": 1080,
  "screenWidth": 1920,
  "sessionId": "cu-sess-001",
  "task": "Open Safari and search for weather",
  "type": "cu_session_create",
}
`;

exports[`IPC message snapshots ClientMessage types cu_session_abort serializes to expected JSON 1`] = `
{
  "sessionId": "cu-sess-001",
  "type": "cu_session_abort",
}
`;

exports[`IPC message snapshots ClientMessage types cu_observation serializes to expected JSON 1`] = `
{
  "axDiff": "+ new element",
  "axTree": "<ax-tree>...</ax-tree>",
  "executionResult": "click completed",
  "screenshot": "base64-screenshot-data",
  "secondaryWindows": "Finder, Terminal",
  "sessionId": "cu-sess-001",
  "type": "cu_observation",
}
`;

exports[`IPC message snapshots ClientMessage types ambient_observation serializes to expected JSON 1`] = `
{
  "appName": "Safari",
  "ocrText": "Hello world visible on screen",
  "requestId": "req-amb-001",
  "timestamp": 1700000000,
  "type": "ambient_observation",
  "windowTitle": "Google",
}
`;

exports[`IPC message snapshots ClientMessage types task_submit serializes to expected JSON 1`] = `
{
  "screenHeight": 1080,
  "screenWidth": 1920,
  "task": "Open Safari and search for weather",
  "type": "task_submit",
}
`;

exports[`IPC message snapshots ClientMessage types ui_surface_action serializes to expected JSON 1`] = `
{
  "actionId": "btn-ok",
  "data": {
    "selectedItem": "item-1",
  },
  "sessionId": "sess-001",
  "surfaceId": "surface-001",
  "type": "ui_surface_action",
}
`;

exports[`IPC message snapshots ClientMessage types app_data_request serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "callId": "call-001",
  "method": "query",
  "surfaceId": "surface-001",
  "type": "app_data_request",
}
`;

exports[`IPC message snapshots ClientMessage types skills_list serializes to expected JSON 1`] = `
{
  "type": "skills_list",
}
`;

exports[`IPC message snapshots ClientMessage types skill_detail serializes to expected JSON 1`] = `
{
  "skillId": "my-skill",
  "type": "skill_detail",
}
`;

exports[`IPC message snapshots ClientMessage types skills_enable serializes to expected JSON 1`] = `
{
  "name": "my-skill",
  "type": "skills_enable",
}
`;

exports[`IPC message snapshots ClientMessage types skills_disable serializes to expected JSON 1`] = `
{
  "name": "my-skill",
  "type": "skills_disable",
}
`;

exports[`IPC message snapshots ClientMessage types skills_configure serializes to expected JSON 1`] = `
{
  "apiKey": "sk-test",
  "config": {
    "verbose": true,
  },
  "env": {
    "API_KEY": "test-key",
  },
  "name": "my-skill",
  "type": "skills_configure",
}
`;

exports[`IPC message snapshots ClientMessage types skills_install serializes to expected JSON 1`] = `
{
  "slug": "clawhub/my-skill",
  "type": "skills_install",
  "version": "1.0.0",
}
`;

exports[`IPC message snapshots ClientMessage types skills_uninstall serializes to expected JSON 1`] = `
{
  "name": "my-skill",
  "type": "skills_uninstall",
}
`;

exports[`IPC message snapshots ClientMessage types skills_update serializes to expected JSON 1`] = `
{
  "name": "my-skill",
  "type": "skills_update",
}
`;

exports[`IPC message snapshots ClientMessage types skills_check_updates serializes to expected JSON 1`] = `
{
  "type": "skills_check_updates",
}
`;

exports[`IPC message snapshots ClientMessage types skills_search serializes to expected JSON 1`] = `
{
  "query": "weather",
  "type": "skills_search",
}
`;

exports[`IPC message snapshots ClientMessage types suggestion_request serializes to expected JSON 1`] = `
{
  "requestId": "req-suggest-001",
  "sessionId": "sess-001",
  "type": "suggestion_request",
}
`;

exports[`IPC message snapshots ClientMessage types add_trust_rule serializes to expected JSON 1`] = `
{
  "decision": "allow",
  "pattern": "git *",
  "scope": "/projects/my-app",
  "toolName": "bash",
  "type": "add_trust_rule",
}
`;

exports[`IPC message snapshots ClientMessage types trust_rules_list serializes to expected JSON 1`] = `
{
  "type": "trust_rules_list",
}
`;

exports[`IPC message snapshots ClientMessage types remove_trust_rule serializes to expected JSON 1`] = `
{
  "id": "rule-001",
  "type": "remove_trust_rule",
}
`;

exports[`IPC message snapshots ClientMessage types update_trust_rule serializes to expected JSON 1`] = `
{
  "decision": "allow",
  "id": "rule-001",
  "pattern": "git push *",
  "priority": 50,
  "scope": "/projects/my-app",
  "tool": "bash",
  "type": "update_trust_rule",
}
`;

exports[`IPC message snapshots ClientMessage types usage_summary_request serializes to expected JSON 1`] = `
{
  "preset": "24h",
  "type": "usage_summary_request",
}
`;

exports[`IPC message snapshots ClientMessage types budget_status_request serializes to expected JSON 1`] = `
{
  "type": "budget_status_request",
}
`;

exports[`IPC message snapshots ServerMessage types assistant_text_delta serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "text": "Here is some output",
  "type": "assistant_text_delta",
}
`;

exports[`IPC message snapshots ServerMessage types assistant_thinking_delta serializes to expected JSON 1`] = `
{
  "thinking": "Let me consider this...",
  "type": "assistant_thinking_delta",
}
`;

exports[`IPC message snapshots ServerMessage types tool_use_start serializes to expected JSON 1`] = `
{
  "input": {
    "command": "ls -la",
  },
  "toolName": "bash",
  "type": "tool_use_start",
}
`;

exports[`IPC message snapshots ServerMessage types tool_output_chunk serializes to expected JSON 1`] = `
{
  "chunk": 
"file1.ts
file2.ts
"
,
  "type": "tool_output_chunk",
}
`;

exports[`IPC message snapshots ServerMessage types tool_result serializes to expected JSON 1`] = `
{
  "diff": {
    "filePath": "/tmp/test.ts",
    "isNewFile": false,
    "newContent": "const x = 2;",
    "oldContent": "const x = 1;",
  },
  "isError": false,
  "result": "Command completed successfully",
  "status": "success",
  "toolName": "bash",
  "type": "tool_result",
}
`;

exports[`IPC message snapshots ServerMessage types confirmation_request serializes to expected JSON 1`] = `
{
  "allowlistOptions": [
    {
      "description": "Allow rm commands",
      "label": "Allow rm commands",
      "pattern": "bash:rm *",
    },
  ],
  "diff": {
    "filePath": "/tmp/test.ts",
    "isNewFile": false,
    "newContent": "new",
    "oldContent": "old",
  },
  "input": {
    "command": "rm -rf /tmp/test",
  },
  "requestId": "req-002",
  "riskLevel": "high",
  "sandboxed": false,
  "scopeOptions": [
    {
      "label": "In /tmp",
      "scope": "/tmp",
    },
  ],
  "sessionId": "sess-001",
  "toolName": "bash",
  "type": "confirmation_request",
}
`;

exports[`IPC message snapshots ServerMessage types message_complete serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "type": "message_complete",
}
`;

exports[`IPC message snapshots ServerMessage types session_info serializes to expected JSON 1`] = `
{
  "correlationId": "corr-001",
  "sessionId": "sess-001",
  "title": "My session",
  "type": "session_info",
}
`;

exports[`IPC message snapshots ServerMessage types session_list_response serializes to expected JSON 1`] = `
{
  "sessions": [
    {
      "id": "sess-001",
      "title": "First session",
      "updatedAt": 1700000000,
    },
    {
      "id": "sess-002",
      "title": "Second session",
      "updatedAt": 1700001000,
    },
  ],
  "type": "session_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types error serializes to expected JSON 1`] = `
{
  "message": "Something went wrong",
  "type": "error",
}
`;

exports[`IPC message snapshots ServerMessage types pong serializes to expected JSON 1`] = `
{
  "type": "pong",
}
`;

exports[`IPC message snapshots ServerMessage types generation_cancelled serializes to expected JSON 1`] = `
{
  "type": "generation_cancelled",
}
`;

exports[`IPC message snapshots ServerMessage types generation_handoff serializes to expected JSON 1`] = `
{
  "queuedCount": 2,
  "requestId": "req-handoff-001",
  "sessionId": "sess-001",
  "type": "generation_handoff",
}
`;

exports[`IPC message snapshots ServerMessage types model_info serializes to expected JSON 1`] = `
{
  "model": "claude-opus-4-6",
  "provider": "anthropic",
  "type": "model_info",
}
`;

exports[`IPC message snapshots ServerMessage types history_response serializes to expected JSON 1`] = `
{
  "messages": [
    {
      "role": "user",
      "text": "Hello",
      "timestamp": 1700000000,
    },
    {
      "role": "assistant",
      "text": "Hi there!",
      "timestamp": 1700000001,
    },
  ],
  "type": "history_response",
}
`;

exports[`IPC message snapshots ServerMessage types undo_complete serializes to expected JSON 1`] = `
{
  "removedCount": 2,
  "type": "undo_complete",
}
`;

exports[`IPC message snapshots ServerMessage types usage_update serializes to expected JSON 1`] = `
{
  "estimatedCost": 0.025,
  "inputTokens": 150,
  "model": "claude-opus-4-6",
  "outputTokens": 50,
  "totalInputTokens": 1500,
  "totalOutputTokens": 500,
  "type": "usage_update",
}
`;

exports[`IPC message snapshots ServerMessage types usage_response serializes to expected JSON 1`] = `
{
  "estimatedCost": 0.025,
  "model": "claude-opus-4-6",
  "totalInputTokens": 1500,
  "totalOutputTokens": 500,
  "type": "usage_response",
}
`;

exports[`IPC message snapshots ServerMessage types context_compacted serializes to expected JSON 1`] = `
{
  "compactedMessages": 56,
  "estimatedInputTokens": 108000,
  "maxInputTokens": 180000,
  "previousEstimatedInputTokens": 220000,
  "summaryCalls": 3,
  "summaryInputTokens": 4200,
  "summaryModel": "claude-opus-4-6",
  "summaryOutputTokens": 900,
  "thresholdTokens": 144000,
  "type": "context_compacted",
}
`;

exports[`IPC message snapshots ServerMessage types secret_detected serializes to expected JSON 1`] = `
{
  "action": "redact",
  "matches": [
    {
      "redactedValue": "sk-****abcd",
      "type": "api_key",
    },
  ],
  "toolName": "bash",
  "type": "secret_detected",
}
`;

exports[`IPC message snapshots ServerMessage types memory_recalled serializes to expected JSON 1`] = `
{
  "entityHits": 3,
  "injectedTokens": 480,
  "latencyMs": 55,
  "lexicalHits": 12,
  "model": "text-embedding-3-small",
  "provider": "openai",
  "recencyHits": 6,
  "semanticHits": 8,
  "type": "memory_recalled",
}
`;

exports[`IPC message snapshots ServerMessage types memory_status serializes to expected JSON 1`] = `
{
  "degraded": false,
  "enabled": true,
  "model": "text-embedding-3-small",
  "provider": "openai",
  "type": "memory_status",
}
`;

exports[`IPC message snapshots ServerMessage types budget_warning serializes to expected JSON 1`] = `
{
  "type": "budget_warning",
  "violations": [
    {
      "action": "warn",
      "amountUsd": 10,
      "currentSpend": 10.5,
      "period": "day",
    },
  ],
}
`;

exports[`IPC message snapshots ServerMessage types cu_action serializes to expected JSON 1`] = `
{
  "input": {
    "x": 100,
    "y": 200,
  },
  "reasoning": "Clicking the search button",
  "sessionId": "cu-sess-001",
  "stepNumber": 1,
  "toolName": "click",
  "type": "cu_action",
}
`;

exports[`IPC message snapshots ServerMessage types cu_complete serializes to expected JSON 1`] = `
{
  "sessionId": "cu-sess-001",
  "stepCount": 5,
  "summary": "Successfully opened Safari and searched for weather",
  "type": "cu_complete",
}
`;

exports[`IPC message snapshots ServerMessage types cu_error serializes to expected JSON 1`] = `
{
  "message": "Session timed out after 30 steps",
  "sessionId": "cu-sess-001",
  "type": "cu_error",
}
`;

exports[`IPC message snapshots ServerMessage types task_routed serializes to expected JSON 1`] = `
{
  "interactionType": "computer_use",
  "sessionId": "sess-routed-001",
  "type": "task_routed",
}
`;

exports[`IPC message snapshots ServerMessage types ambient_result serializes to expected JSON 1`] = `
{
  "decision": "suggest",
  "requestId": "req-amb-001",
  "suggestion": "Try running the test with --verbose flag for more details",
  "summary": "User appears to be debugging a test failure",
  "type": "ambient_result",
}
`;

exports[`IPC message snapshots ServerMessage types ui_surface_show serializes to expected JSON 1`] = `
{
  "actions": [
    {
      "id": "dismiss",
      "label": "OK",
      "style": "primary",
    },
  ],
  "data": {
    "body": "All tests passed.",
    "title": "Build Complete",
  },
  "sessionId": "sess-001",
  "surfaceId": "surface-001",
  "surfaceType": "card",
  "title": "Status Update",
  "type": "ui_surface_show",
}
`;

exports[`IPC message snapshots ServerMessage types ui_surface_update serializes to expected JSON 1`] = `
{
  "data": {
    "body": "Updated body text.",
  },
  "sessionId": "sess-001",
  "surfaceId": "surface-001",
  "type": "ui_surface_update",
}
`;

exports[`IPC message snapshots ServerMessage types ui_surface_dismiss serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "surfaceId": "surface-001",
  "type": "ui_surface_dismiss",
}
`;

exports[`IPC message snapshots ServerMessage types app_data_response serializes to expected JSON 1`] = `
{
  "callId": "call-001",
  "result": [
    {
      "appId": "app-001",
      "createdAt": 1700000000,
      "data": {
        "name": "Test",
      },
      "id": "rec-001",
      "updatedAt": 1700000000,
    },
  ],
  "success": true,
  "surfaceId": "surface-001",
  "type": "app_data_response",
}
`;

exports[`IPC message snapshots ServerMessage types skills_list_response serializes to expected JSON 1`] = `
{
  "skills": [
    {
      "degraded": false,
      "description": "A test skill",
      "emoji": "🔧",
      "id": "my-skill",
      "name": "My Skill",
      "source": "bundled",
      "state": "enabled",
      "updateAvailable": false,
      "userInvocable": true,
    },
  ],
  "type": "skills_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types skills_state_changed serializes to expected JSON 1`] = `
{
  "name": "my-skill",
  "state": "enabled",
  "type": "skills_state_changed",
}
`;

exports[`IPC message snapshots ServerMessage types skills_operation_response serializes to expected JSON 1`] = `
{
  "operation": "enable",
  "success": true,
  "type": "skills_operation_response",
}
`;

exports[`IPC message snapshots ServerMessage types skill_detail_response serializes to expected JSON 1`] = `
{
  "body": 
"# Skill content

Do the thing."
,
  "skillId": "my-skill",
  "type": "skill_detail_response",
}
`;

exports[`IPC message snapshots ServerMessage types suggestion_response serializes to expected JSON 1`] = `
{
  "requestId": "req-suggest-001",
  "source": "llm",
  "suggestion": "Tell me more about that",
  "type": "suggestion_response",
}
`;

exports[`IPC message snapshots ServerMessage types usage_summary_response serializes to expected JSON 1`] = `
{
  "byModel": [
    {
      "eventCount": 42,
      "key": "sonnet-4.5",
      "totalCost": 1.25,
    },
  ],
  "byProvider": [
    {
      "eventCount": 42,
      "key": "anthropic",
      "totalCost": 1.25,
    },
  ],
  "dailyBuckets": [
    {
      "date": "2025-01-15",
      "eventCount": 25,
      "totalCost": 0.75,
    },
    {
      "date": "2025-01-16",
      "eventCount": 17,
      "totalCost": 0.5,
    },
  ],
  "eventCount": 42,
  "preset": "24h",
  "totalInputTokens": 50000,
  "totalOutputTokens": 15000,
  "totalPricedCostUsd": 1.25,
  "type": "usage_summary_response",
}
`;

exports[`IPC message snapshots ServerMessage types budget_status_response serializes to expected JSON 1`] = `
{
  "budgets": [
    {
      "action": "warn",
      "amountUsd": 10,
      "currentSpend": 1.25,
      "exceeded": false,
      "period": "day",
    },
    {
      "action": "block",
      "amountUsd": 100,
      "currentSpend": 45,
      "exceeded": false,
      "period": "month",
    },
  ],
  "enabled": true,
  "type": "budget_status_response",
}
`;

exports[`IPC message snapshots ServerMessage types message_queued serializes to expected JSON 1`] = `
{
  "position": 1,
  "requestId": "req-queue-001",
  "sessionId": "sess-001",
  "type": "message_queued",
}
`;

exports[`IPC message snapshots ServerMessage types message_dequeued serializes to expected JSON 1`] = `
{
  "requestId": "req-queue-001",
  "sessionId": "sess-001",
  "type": "message_dequeued",
}
`;

exports[`IPC message snapshots ServerMessage types timer_completed serializes to expected JSON 1`] = `
{
  "durationMinutes": 25,
  "label": "Focus time",
  "sessionId": "sess-001",
  "timerId": "tmr-001",
  "type": "timer_completed",
}
`;

exports[`IPC message snapshots ServerMessage types trust_rules_list_response serializes to expected JSON 1`] = `
{
  "rules": [
    {
      "createdAt": 1700000000,
      "decision": "allow",
      "id": "rule-001",
      "pattern": "git *",
      "priority": 100,
      "scope": "/projects/my-app",
      "tool": "bash",
    },
  ],
  "type": "trust_rules_list_response",
}
`;
